--- a/templates/front.html
+++ b/templates/front.html
@@ -1,74 +1,18 @@
-<!DOCTYPE html>
+    {% extends "base.html" %}
+    {% block content %}
 
-<html>
-    <head>
-        <title>/Build A Blog!/</title>
-    </head>
-    <style type="text/css">
-            body {
-                font-family: sans-serif;
-                width: 800px;
-                margin: 0 auto;
-                padding: 10px;
-            }
 
-            .error {
-                color: red
-            }
 
-            label {
-                display: block;
-                font-size: 20px;
-            }
-
-            input[type=text] {
-                width: 400px;
-                font-size: 20px;
-                padding: 2px;
-            }
-
-            textarea {
-                width: 400px;
-                height: 200px;
-                font-size: 17px;
-                font-family: monospace;
-            }
-
-            input[type=submit] {
-                font-size: 24px;
-            }
-
-            hr {
-                margin: 20px auto;
-            }
-
-            .post_content + .post_content {
-                margin-top: 20px;
-            }
-
-            .post-title {
-                font-weight: bold;
-                font-size: 20px;
-            }
-
-            .post-body {
-                margin: 0;
-                font-size: 17px;
-            }
-        </style>
-
-        <body style="margin: 0">
-
-    <h1>/blog builder/</h1>
     {% for blogpost in posts %}
-        <div class="blog">
 
+            <div class="bloge">
+            <a href="/blog/{{posts.key().id()}}" class="post-title">{{posts.title}}
+            </a>
 
-            <div class="bloge"><a href="/blog/{{blogpost}}"{{bloge.title}}
-            <pre class="blog-body">{{blogpost.bloge}}</pre>
-        </div>
+            <pre class="blog-body">{{posts.bloge}}
+            </pre>
+
+            </div>
 
     {% endfor %}
-    <hr>
-    </body>
-</html>
+    {% endblock %}
