--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,20 +1,20 @@
-{% extends "front.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 <form method="post">
     <label>
-        <div>title</div>
+        <div><title>Home</title></div>
         <input type="text" name="title" value="{{title}}">
     </label>
 
     <label>
+        <div class="error">{{error}}</div>
+
         <div>New Post</div>
+
         <textarea name="bloge">{{bloge}}</textarea>
     </label>
-    <div class="error">{{error}}</div>
     <input type="submit">
 </form>
-    
-
 
 {% endblock %}
