--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> Blogs!</title>
-</head>
+
 
 <style type="text/css">
+
+
         body {
             font-family: sans-serif;
             width: 800px;
@@ -57,12 +57,16 @@
         }
 
     </style>
-
+    <head>
+    <h1> Blogs!</h1>
+    </head>
 
     <body style="margin: 0">
 
             <a href='/newpost'>New Post|</a>
             <a href='/'>Home</a>
+            <br>
+            <br>
         {% block content %}
         {% endblock %}
     </body>
