--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -12,7 +12,7 @@
         <form method="post">
             <label>
                 <div> Title</div>
-                <input type="text" name="title">
+                <input type="text" name="title" value="{{title}}">
             </label>
 
             <div> Post</div>
